--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="https://feeds.abplive.com/onecms/images/uploaded-images/2025/02/18/ad8c4762b3fb4ec2f4598b6b742d52d11739901932014572_original.jpg?impolicy=abp_cdn&imwidth=320" alt="Professional portrait of a young computer science graduate in formal attire standing in front of bookshelves" />
+                    <img src="https://i.zoomtventertainment.com/story/dilip_joshi_movies.jpg" alt="Professional portrait of a young computer science graduate in formal attire standing in front of bookshelves" />
                 </div>
                 <div class="about-text">
                     <h3>Computer Science Graduate</h3>
@@ -596,10 +596,10 @@
                     <p>My coursework has equipped me with knowledge in various programming languages including Java, Python, and JavaScript, as well as web technologies like HTML, CSS, and frameworks such as React and Node.js.</p>
                     <p>I'm enthusiastic about applying my knowledge to real-world challenges and continuously improving my skills. I thrive in collaborative environments and enjoy taking on projects that push my boundaries.</p>
                     <div class="about-details">
-                        <p><strong>Name:</strong> Your Name</p>
+                        <p><strong>Name:</strong> Amit Kumar Mahato</p>
                         <p><strong>Degree:</strong> Bachelor of Computer Applications</p>
-                        <p><strong>Email:</strong> your.email@example.com</p>
-                        <p><strong>Location:</strong> Your City, Country</p>
+                        <p><strong>Email:</strong> amitkrs2004@gmail.com</p>
+                        <p><strong>Location:</strong> Jamshedpur, Jharkhand</p>
                     </div>
                     <a href="#" class="btn">Download CV</a>
                 </div>
@@ -635,7 +635,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>JavaScript</span>
-                            <span>80%</span>
+                            <span>20%</span>
                         </div>
                         <div class="skill-progress">
                             <div class="skill-progress-bar" style="width: 80%;"></div>
@@ -647,7 +647,7 @@
                     <div class="skill-item">
                         <div class="skill-name">
                             <span>HTML/CSS</span>
-                            <span>90%</span>
+                            <span>50%</span>
                         </div>
                         <div class="skill-progress">
                             <div class="skill-progress-bar" style="width: 90%;"></div>
@@ -772,7 +772,7 @@
                 <div class="timeline-item left">
                     <div class="timeline-content">
                         <h3>Bachelor of Computer Applications</h3>
-                        <p><strong>Your University Name</strong> | 2021 - 2024</p>
+                        <p><strong>Arka Jain University</strong> | 2023 - 2026</p>
                         <p>Relevant coursework: Data Structures, Algorithms, Database Systems, Web Development, Software Engineering</p>
                     </div>
                 </div>
@@ -786,8 +786,8 @@
                 <div class="timeline-item left">
                     <div class="timeline-content">
                         <h3>Higher Secondary School</h3>
-                        <p><strong>Your School Name</strong> | 2019 - 2021</p>
-                        <p>Completed with specialization in Computer Science and Mathematics.</p>
+                        <p><strong>Xavier School gamharia</strong> | 2021 - 2023</p>
+                        <p>Completed with specialization in Computer Science and Commerce.</p>
                     </div>
                 </div>
             </div>
@@ -897,7 +897,7 @@
         });
 
         // Typing animation for hero section
-        const name = "Your Name";
+        const name = "Amit";
         let i = 0;
         const typing = () => {
             if (i < name.length) {
