--- a/index.html
+++ b/index.html
@@ -372,17 +372,19 @@
                 <!-- Project 2 -->
                 <div class="card overflow-hidden animate-fadeIn delay-300">
                     <div class="h-48 overflow-hidden">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1502f0dc-29d3-4344-a999-b459d0dc7d7a.png" alt="Social media platform interface showing user profiles, posts and interaction buttons" class="w-full h-full object-cover" />
+                        <img src="https://raw.githubusercontent.com/xShaimaa/Coursera-Sales-Analysis-in-Power-BI-Clean-and-Visualize-Sales-Data-Guided-Project/main/01-Sales-Analysis-Guided-Project/report.png" alt="Social media platform interface showing user profiles, posts and interaction buttons" class="w-full h-full object-cover" />
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Social Media Platform</h3>
-                        <p class="text-light opacity-80 mb-4">A university social network with real-time messaging and groups.</p>
+                        <h3 class="text-xl font-semibold mb-2">Sales Data Analysis Dashboard</h3>
+                        <p class="text-light opacity-80 mb-4">Analyze sales data from CSV/Excel. Visualized monthly sales trends & top-selling products.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">JavaScript</span>
-                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">Firebase</span>
+                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">Python</span>
+                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20"> Power BI</span>
+                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">Pandas</span>
+                            <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">Matplotlib</span>
                             <span class="px-3 py-1 text-xs rounded-full bg-primary bg-opacity-20">HTML/CSS</span>
                         </div>
-                        <a href="#" class="text-secondary font-medium hover:underline">View Project →</a>
+                        <a href="https://codex076.github.io/Sales-Data-Analysis-Dashboard/" class="text-secondary font-medium hover:underline">View Project →</a>
                     </div>
                 </div>
                 
