--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="animate-fadeIn delay-300 flex justify-center">
                 <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-primary border-opacity-30">
-                    <img src="https://i.postimg.cc/gkVqm0Ym/105.jpg" alt="Profile of a BCA student wearing glasses, smiling confidently against a dark background" class="w-full h-full object-cover">
+                    <img src="https://i.postimg.cc/g2qFpFvM/074-1-11.jpg" alt="Profile of a BCA student wearing glasses, smiling confidently against a dark background" class="w-full h-full object-cover">
                     <div class="absolute inset-0 bg-primary bg-opacity-10 mix-blend-overlay"></div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                         As a BCA student, I'm deeply fascinated by the intersection of technology and creativity. My journey in computer applications has been driven by curiosity and passion for solving problems through code.
                     </p>
                     <div class="mb-6">
-                        <a href="#" class="inline-block px-6 py-3 border border-secondary text-secondary rounded-full font-medium hover:bg-secondary hover:bg-opacity-10 transition">
+                        <a href="https://drive.google.com/file/d/1H2ESirqQ7C-TvTUUnmQ9B5q6UKkW9D2g/view?usp=sharing" class="inline-block px-6 py-3 border border-secondary text-secondary rounded-full font-medium hover:bg-secondary hover:bg-opacity-10 transition">
                             Get My Resume
                             <svg class="w-4 h-4 inline-block ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path>
